--- a/arg/dvorak.tex
+++ b/arg/dvorak.tex
@@ -587,5 +587,41 @@ Neumann and recorded these in 1959; the bass is weak, but the overall sound is p
 Carl Bauman freely mentions Sejna in the same breath with Talich and Ancerl. And Lawrence Hansen calls the Sejna recording colorful, idiomatic, and exciting. Another Czech conductor who found this music natural was Zdenek Kosler. He holds his own against the heady Neumann, the more elegant Kubelik (just reissued by DG), and the manic but tightly-focussed Szell. As Lawrence Hansen told us, these are rip-snorting performances full of gusto and flair, with a big, gutsy orchestral sound. They have a lot of energy, vitality, joy, and freedom.
 
 The Segerstam on BIS has good sound---especially bass---and some original ideas. Fasts seem faster than usual and slows slower. Still, the orchestra isn't world-class. We found the
+Maazel boring (July/Aug 1989 covers that and four others). There is plenty of vigor in the recording Dorati made in his 80th year (Vox-Mar/Apr 1998), and readers who like that conductor will respond to his two earlier recordings as well; but most of us wouldn't list Dorati among the top recommendations.
+The last two listings below are the piano duo original, before Dvorak orchestrated them.
+Thorson and Thurber relish every piece and every mood; they enjoy the rhythms and the melodies, and they help us to enjoy them more than any other team does. The other great piano recording was by the incomparable Duo Crommelynck on Claves (Nov/Dec 1991).
+
+\st
+Neumann & Supraphon 1959\\
+Neumann & Canyon 3615\\
+Kosler & Naxos 550143\\
+Sejna & Supraphon 1916\\
+Thorson \& Thurber & Olympia 362\\
+Duo Crommelynck & Claves 910
+\et
+
+\section{Legends}
+
+The 10 Legends of Opus 59 (March 1881) were Dvorak's first attempt to capitalize on the great success of the first set of Slavonic Dances. In fact, 1, 3, 5, and 9 are Slavonic dances in all but name. They were written for piano duet, but Dvorak himself orchestrated them right away.
+Today they sound better orchestrated, though there are fine piano versions-including the listing below (elegant, graceful, relaxed).
+Kubelik and Sejna are old classics; the Leppard (Philips) was for some time in the LP era the best available. Järvi is pretty good. But if you can afford it, the Canyon recording is gorgeous. Naxos needs to issue the excellent Gunzenhauser on a single disc (it is spread over two as fill).
+
+\st
+Czech Phil/Albrecht & Canyon 293\\
+Thorson and Thurber & Olympia 363
+\et
+
+\section{Slavonic Rhapsodies}
+
+These are among the many Dvorak works looked down upon by the musicologists. Only No. 3 has been considered respectable. But all three are delicious, and the Editor's favorite is No. 1. Its best recording was by Neumann, but that hasn't been around in years. You should enjoy all three, and the Naxos is the one to have, unless you can find the Gregor on Supraphon---either deleted or not imported any more, it would seem. The Centaur (Burke, with American Suite) is tamer than the Naxos but still quite Czech.
+
+\st
+Kosler & Naxos 550610
+\et
+
+\section{American Suite}
+
+This started out as piano music in 1894 (Opus
+98), and it was composed purely for pleasure.
 
 \end{document}
