--- a/arg/dvorak.tex
+++ b/arg/dvorak.tex
@@ -499,8 +499,8 @@ To those we must add:
 
 \section{Historic Recordings}
 
-Tom Godell dealt with the Talich recordings of symphonies 6-8 in the Historic Conductors Overview in May/June 1998. His are among the most important Dvorak performances in the
-catalog. After all, his connection with Dvorak went back to Dvorak's time. (Dvorak recommended him for admission to the Prague Conservatory in 1897.) I agree with his comments on the Talich 6 and 7 and 8 on Koch.
+Tom Godell dealt with the Talich recordings of symphonies 6-8 in the Historic Conductors Overview in May/June 1998. His are among the most important Dvořák performances in the
+catalog. After all, his connection with Dvořák went back to Dvořák's time. (Dvořák recommended him for admission to the Prague Conservatory in 1897.) I agree with his comments on the Talich 6 and 7 and 8 on Koch.
 These are indispensable for the collector of older material. I also wouldn't be without the wonderfully propulsive Talich 8th on Supraphon.
 
 Another Czech conductor just as important as Talich was Karel Sejna. His slightly more recent-and thus better recorded-Supraphon disc of Symphony 5, coupled with one of the finest recordings of the three Slavonic Rhapsodies, is nearly indispensable---as are his versions of 6 and 7 in the same series. Tempos are never rushed, and the ebb and flow of the music is wonderful.
@@ -509,7 +509,7 @@ I hesitate to mention it because the 1944 and 1946 Prague Radio transcriptions s
 The {\it New World} is over-recorded, but the Talich is one of the most important. It is a vital, typically Czech interpretation. I cannot resist mentioning the pre-World War II recording by George Szell with the Czech Philharmonic. It has much of the tension and drama of the conductor's later Cleveland recordings but also a
 I cannot resist mentioning the pre-World War II recording by George Szell with the Czech Philharmonic. It has much of the tension and drama of the conductor's later Cleveland recordings but also a youthful freshness. Dutton has managed a superb transfer, and the coupling is one of the truly legendary recordings: Szell with Casals in the Cello Concerto (it has never been out of the catalogs in over 60 years). EMI and Pearl also currently list it, but the Dutton transfer and discmate are better.
 
-Not many people know that Sir Thomas Beecham and the London Philharmonic recorded the Fifth Symphony, long before it was commonly heard. It surely must have led many to realize just how wonderful early Dvorak is.
+Not many people know that Sir Thomas Beecham and the London Philharmonic recorded the Fifth Symphony, long before it was commonly heard. It surely must have led many to realize just how wonderful early Dvořák is.
 
 One other disc deserves mention, taped at the Prague Spring Festival in 1951 and 1956.
 Andre Navarra is the cellist in the Cello Concerto with the much under-appreciated Frantisek Stupka conducting. Also included is a marvelous performance by the Czech violinist Vasa Prihoda with Jaroslav Krombholc in the Violin Concerto. The sound isn't particularly good,
@@ -520,7 +520,7 @@ Talich recorded them twice. His 1935 set is on Music and Arts, and his 1950 edit
 
 \section{Sets}
 
-Complete sets are a marketing ploy. There is no reason on earth why any musician should record all of any composer. Each conductor should record the symphonies he loves. If the industry operated by that rule we would all have an easier time deciding what to buy. I have never met a conductor who felt an affinity for all nine Dvoraks---or even all nine Beethovens.
+Complete sets are a marketing ploy. There is no reason on earth why any musician should record all of any composer. Each conductor should record the symphonies he loves. If the industry operated by that rule we would all have an easier time deciding what to buy. I have never met a conductor who felt an affinity for all nine Dvořáks---or even all nine Beethovens.
 Nor is it easy to find one who can resist temptation when asked to record them all!
 We do not recommend that you buy a complete set, but if you insist, you must also buy a few individual discs to make up for the weaknesses in the set. Kubelik's set dates from 1966-73 (No. 8 is the oldest, No. 1 the most recent). No. 3 is terrible, and No. 4 is noi among the best-and, naturally, there are better New Worlds and 7ths and 8ths (though those two are pretty good). As for the Kertesz set, there are better recordings of 1,7,8, and 9.
 Only a few of Järvi and Neumann rank among the best.
@@ -531,7 +531,7 @@ Many of the above observations are the results of our discussions.-Ed]
 
 Of the five symphonic poems, four are based on the lurid tales of Karel Jaromir Erben, which are even more gruesome than the Brothers Grimm, reveling in morbid accounts of butchery, body mutilation, and other grisly goings-on. In {\it The Midday Witch} a mother threatens her mischievous child with tales of a malevolent hobgoblin, who promptly appears before her horrified eyes to claim the boy; the father returns home to find the child dead---crushed beneath the mother, who has collapsed in fright. In {\it The Wood Dove} we have the all-too-easily-consoled widow who despite her lamentations is quite prepared to marry again until the plaintive sound of the Wood Dove fills her heart with remorse, since it was she who did her husband in. {\it The Water Goblin} is a particularly ominous goblin who seizes a young maiden and takes her with him to the bottom of the lake; when she tricks him into letting her see her mother one last time, he relents on the condition that she leave their baby behind; but when she reneges on the deal and refuses to return, the {\it Watersprite} has his revenge-the girl answers a knock on the door to find the baby's headless body on the porch. Only {\it The Golden Spinning Wheel} might be said to have a happy ending: an old woman and her daughter hack up the beautiful stepdaughter and pull the old switcheroo once they learn the king seeks her hand in marriage, but the Spinning Wheel---apparently equipped with a sound card---tells the king what happened, and with the help of a mysterious old man the girl is put back together and marries the king after all.
 
-No such morbid content informs Dvorak's last tone poem, {\it Heldenlied} (Hero's Song); though vaguely programmatic, contrasting the Hero's initial despair (or is it the composer's?) with his eventual victory and triumph, we are not given a blow-by-blow analysis as with Richard Strauss's {\it Heldenleben} written a couple
+No such morbid content informs Dvořák's last tone poem, {\it Heldenlied} (Hero's Song); though vaguely programmatic, contrasting the Hero's initial despair (or is it the composer's?) with his eventual victory and triumph, we are not given a blow-by-blow analysis as with Richard Strauss's {\it Heldenleben} written a couple
 years later.
 
 If you want all five tone poems together, your best bet is the Chandos set with Järvi
@@ -543,7 +543,7 @@ Erben fables. The same recording was on Supraphon 0378, coupled with the {\it Sl
 
 Rafael Kubelik never recorded {\it Hero's Song}; but his account of the other four pieces for DG (435 074) is hard to beat, extracting the very essence of the composer's dramatic (and sometimes long-winded) narrative in sonics that---if not as upfront and vital as Chandos's---are still clear and detailed to a fault. On Naxos 550598, Stephen Gunzenhauser offers terse, well-characterized portraits of the {\it Wood Dove}, {\it Midday Witch} and {\it Spinning Wheel}; sonics are warm and enveloping, and performances are first rate. Lawrence Hansen likes Vernon Handley's recording of the {\it Wood Dove}, {\it Watersprite} and {\it Spinning Wheel} better than Järvi's: Handley seems more sincere and expressive and allows the music to flow more naturally---though occasional shifts in sonic perspective prove distracting.
 
-Vaclav Neumann on Supraphon 0199 can be recommended as a quick-fix way of obtaining all four Erben-inspired pieces on one well-filled disc; while much of the atmosphere of the music still manages to come across, the recording is cramped and cavernous. Compared to Järvi and Kubelik, Zdenek Chalabala's vintage recordings are rather raw sounding---especially the winds, with plangent (occasionally shrill) brasses; but even such sonic shortcomings do not detract measurably from glorious performances that demonstrate a singing quality and flexibility of phrasing perhaps possible only with a conductor and ensemble (the Czech Philharmonic, of course) thoroughly familiar with the music. Chalabala was a wonderful interpreter of Dvorak and Smetana, and these
+Vaclav Neumann on Supraphon 0199 can be recommended as a quick-fix way of obtaining all four Erben-inspired pieces on one well-filled disc; while much of the atmosphere of the music still manages to come across, the recording is cramped and cavernous. Compared to Järvi and Kubelik, Zdenek Chalabala's vintage recordings are rather raw sounding---especially the winds, with plangent (occasionally shrill) brasses; but even such sonic shortcomings do not detract measurably from glorious performances that demonstrate a singing quality and flexibility of phrasing perhaps possible only with a conductor and ensemble (the Czech Philharmonic, of course) thoroughly familiar with the music. Chalabala was a wonderful interpreter of Dvořák and Smetana, and these
 are marvelously idiomatic performances. They were originally issued on Urania but are now on Supraphon 3056. The classic Talich recordings from 1949-51 are available on Supraphon---not the same as the 1954 concert performances of {\it Watersprite}, {\it Midday Witch} and {\it Wood Dove} on Panton (both good).
 Istvan Kertesz's superb London recordings of three of the tone poems have long been available only as Decca Ovation imports, the {\it Spinning Wheel} and {\it Watersprite} coupled with the {\it Scherzo Capriccioso} and {\it Othello Overture} on 425 060 and the {\it Midday Witch} coupled with the {\it Symphonic Variations}, {\it Hussites} and {\it Serenade for Winds} on 425 061. These have now been put together on a ``Double Decca'', replacing the {\it Wind Serenade} with three overtures: {\it Carnival}, {\it Nature's Realm}, and {\it My Home}.
 Watch for a US issue on London.
@@ -553,29 +553,29 @@ Both are absorbing and have excellent sound.
 Inbal includes a strong and joyous {\it Wood Dove} with his Teldec set of symphonies 7,8, and 9.
 {\it Midday Witch} was included with the Eighth Symphony by Abbado on Sony (64303); Gerald Fox thought it was as good a performance as any he had heard, emphasizing the musical qualities over the gruesome story line. Seiji Ozawa's Witch is with 8 on a not very well filled Philips disc (434 990), but it is atmospheric, and sound is clear and detailed.
 
-Carl Bauman was disappointed with Belohlavek's {\it Spinning Wheel} on Chandos
+Carl Bauman was disappointed with Bělohlávek's {\it Spinning Wheel} on Chandos
 (9048), coupled with 8; he found it lacking in elegance next to Beecham, Talich, Kubelik, or Chalabala---the recording glassy and harsh.
 
-Mr Haller likes Peter Tiboris's account of {\it Watersprite} very much---at once broadly expressive and sharply characterized---though the remainder of the disc is a rather mixed bag (Elysium 701). The Editor considers both Belohlavek's Watersprite and the Seventh Symphony coupled with it on Chandos 9391 as good as they get: excellent performances in superb sound. Koss (1010) has straitjacketed Zdenek Macal's Water Goblin in diffuse, gray sonics (but other reviewers like it). Naxos had Antoni Wit do it in combination with the Piano Concerto (550896)---no doubt as complement to Stephen Gunzenhauser's account of the other three noted above---and he did it well enough to get top marks from Vroon, who considers it the best there is at any price, gloriously played and recorded.
+Mr Haller likes Peter Tiboris's account of {\it Watersprite} very much---at once broadly expressive and sharply characterized---though the remainder of the disc is a rather mixed bag (Elysium 701). The Editor considers both Bělohlávek's Watersprite and the Seventh Symphony coupled with it on Chandos 9391 as good as they get: excellent performances in superb sound. Koss (1010) has straitjacketed Zdenek Macal's Water Goblin in diffuse, gray sonics (but other reviewers like it). Naxos had Antoni Wit do it in combination with the Piano Concerto (550896)---no doubt as complement to Stephen Gunzenhauser's account of the other three noted above---and he did it well enough to get top marks from Vroon, who considers it the best there is at any price, gloriously played and recorded.
 
-Mr Vroon had high praise for Belohlavek's Wood Dove, as well as the accompanying Sixth Symphony (Chandos 9170); indeed he liked it even more than the Kubelik, praising Belohlavek's expansive treatment of the main theme as well as the thrilling sound. Mr Vroon finds the Macal recording for Koss (1009) too hard-driven---``smooth but tense''---despite splendid sound.
+Mr Vroon had high praise for Bělohlávek's Wood Dove, as well as the accompanying Sixth Symphony (Chandos 9170); indeed he liked it even more than the Kubelik, praising Bělohlávek's expansive treatment of the main theme as well as the thrilling sound. Mr Vroon finds the Macal recording for Koss (1009) too hard-driven---``smooth but tense''---despite splendid sound.
 
 Haller had high praise for the Naxos CD of {\it Hero's Song} conducted by Antoni Wit, coupled with the Czech Suite, Hussites, and Festival March (553005); it's a gloriously festive performance with richly textured sound to match.
 
 \section{Symphonic Overtures}
 
-The {\it Carnival} Overture, one of Dvorak's best-loved works, is the third of three overtures grouped together under the title ``Nature, Life, and Love''; the other two are {\it In Nature's Realm} and {\it Othello}. These are almost more akin to tone poems than overtures; indeed, one writer has called them ``a symphonic cycle consisting of a pastorale, scherzo, and finale''. It is gratifying that so many conductors have recorded the entire cycle, because the familiar leitmotif introduced by the clarinet in all three overtures---described by Karl Schumann as ``a symbol of nature as the basis of all life''---can best be appreciated when it is heard as the unifying theme of all three, not just a pleasant melody encountered along the way.
+The {\it Carnival} Overture, one of Dvořák's best-loved works, is the third of three overtures grouped together under the title ``Nature, Life, and Love''; the other two are {\it In Nature's Realm} and {\it Othello}. These are almost more akin to tone poems than overtures; indeed, one writer has called them ``a symphonic cycle consisting of a pastorale, scherzo, and finale''. It is gratifying that so many conductors have recorded the entire cycle, because the familiar leitmotif introduced by the clarinet in all three overtures---described by Karl Schumann as ``a symbol of nature as the basis of all life''---can best be appreciated when it is heard as the unifying theme of all three, not just a pleasant melody encountered along the way.
 
 Gerd Albrecht recorded the triptych for Supraphon, coupled with the Brahms First
 (1830); Paul Althouse called {\it Carnival} in particular a wild listening experience. Karel Ančerl's account for Supraphon, coupled with {\it My Home} and {\it Hussites} (0605), was praised by Haller as idiomatic and compelling, the sonics crisp and clean. Bohumil Gregor is even drabber in the overtures than in the tone poems.
 On Naxos 550600, Stephen Gunzenhauser couples all three with {\it My Home} and the even rarer {\it Vanda}; they are well worth hearing, despite marked echo, and demonstrate Gunzenhauser's love for the music. Vernon Handley on Chandos 8453 seems more at home in the less familiar {\it Nature's Realm} and {\it Othello} than in the far better known {\it Carnival}; he seems to hold back, and the cavernous sonics don't help matters any. In contrast, on ASV 794 John Farrer has {\it Carnival } fairly explode into your living room, and {\it In Nature's Realm} is one of the better ones as well, but his {\it Othello} doesn't capture the somber mood as well as some others. Kubelik on DG 435 074, coupled with the tone poems, is hard to beat in this repertory, and his hyper {\it Hussites} even outdoes Kertesz for sheer visceral excitement. He offers a fine {\it My Home} as well.
 
-{\it Carnival} turns up pretty often on its own; there are far too many to list, but pride of place would surely go to Bernstein (Sony), Szell (Sony---just reissued with Symphonies 7-9), Dorati (Mercury), and Reiner (RCA). In addition Carl Bauman would recommend Belohlavek (Supraphon 1987, with 9) and Pešek on Virgin (with 3). Vroon praises Järvi (Chandos, with 3). He finds no particular advantage to sound or performance in Libor Pešek's Virgin CD of {\it In Nature's Realm} (with
+{\it Carnival} turns up pretty often on its own; there are far too many to list, but pride of place would surely go to Bernstein (Sony), Szell (Sony---just reissued with Symphonies 7-9), Dorati (Mercury), and Reiner (RCA). In addition Carl Bauman would recommend Bělohlávek (Supraphon 1987, with 9) and Pešek on Virgin (with 3). Vroon praises Järvi (Chandos, with 3). He finds no particular advantage to sound or performance in Libor Pešek's Virgin CD of {\it In Nature's Realm} (with
 6), though it's impressive enough if you don't know Kertesz or Kubelik. Mr Haller recommends Charles Gerhardt on Chesky 108 (part of ``Light Classics'', Volume 2. See tone poems for information on a possible Kertesz reissue---it would top them all.)
 
 \section{Slavonic Dances}
 
-Dvorak's publisher requested these, hoping to build on the tremendous sales he had had of the Brahms Hungarian Dances, played at the time by every pianist in Europe. The first set of eight (Op. 46) were mostly Bohemian (only \No2 was not: it was of Serbian origin). In the second set (Op. 72) Dvorak became more cosmopolitan, with dances from Poland and Russia and Slovakia. But perhaps by then the inspiration was wearing thin: the first set is more appealing.
+Dvořák's publisher requested these, hoping to build on the tremendous sales he had had of the Brahms Hungarian Dances, played at the time by every pianist in Europe. The first set of eight (Op. 46) were mostly Bohemian (only \No2 was not: it was of Serbian origin). In the second set (Op. 72) Dvořák became more cosmopolitan, with dances from Poland and Russia and Slovakia. But perhaps by then the inspiration was wearing thin: the first set is more appealing.
 
 Starting with A, we called the Altrichter inflexible and perfunctory. His lumbering tread changes several numbers into marches (Nov/Dec 1997). Neumann found more warmth and humanity in these pieces, even with faster tempos. And Neumann leads with delightful nuances and tempo fluctuations.
 The latest Neumann is on Canyon---pretty expensive---but it's four minutes slower overall than the 1985 Supraphon, and Carl Bauman says it's worth the extra money (Nov/Dec
@@ -588,7 +588,7 @@ Carl Bauman freely mentions Sejna in the same breath with Talich and Ancerl. And
 
 The Segerstam on BIS has good sound---especially bass---and some original ideas. Fasts seem faster than usual and slows slower. Still, the orchestra isn't world-class. We found the
 Maazel boring (July/Aug 1989 covers that and four others). There is plenty of vigor in the recording Dorati made in his 80th year (Vox-Mar/Apr 1998), and readers who like that conductor will respond to his two earlier recordings as well; but most of us wouldn't list Dorati among the top recommendations.
-The last two listings below are the piano duo original, before Dvorak orchestrated them.
+The last two listings below are the piano duo original, before Dvořák orchestrated them.
 Thorson and Thurber relish every piece and every mood; they enjoy the rhythms and the melodies, and they help us to enjoy them more than any other team does. The other great piano recording was by the incomparable Duo Crommelynck on Claves (Nov/Dec 1991).
 
 \st
@@ -602,7 +602,7 @@ Duo Crommelynck & Claves 910
 
 \section{Legends}
 
-The 10 Legends of Opus 59 (March 1881) were Dvorak's first attempt to capitalize on the great success of the first set of Slavonic Dances. In fact, 1, 3, 5, and 9 are Slavonic dances in all but name. They were written for piano duet, but Dvorak himself orchestrated them right away.
+The 10 Legends of Opus 59 (March 1881) were Dvořák's first attempt to capitalize on the great success of the first set of Slavonic Dances. In fact, 1, 3, 5, and 9 are Slavonic dances in all but name. They were written for piano duet, but Dvořák himself orchestrated them right away.
 Today they sound better orchestrated, though there are fine piano versions---including the listing below (elegant, graceful, relaxed).
 Kubelik and Sejna are old classics; the Leppard (Philips) was for some time in the LP era the best available. Järvi is pretty good. But if you can afford it, the Canyon recording is gorgeous. Naxos needs to issue the excellent Gunzenhauser on a single disc (it is spread over two as fill).
 
@@ -613,7 +613,7 @@ Thorson and Thurber & Olympia 363
 
 \section{Slavonic Rhapsodies}
 
-These are among the many Dvorak works looked down upon by the musicologists. Only No. 3 has been considered respectable. But all three are delicious, and the Editor's favorite is No. 1. Its best recording was by Neumann, but that hasn't been around in years. You should enjoy all three, and the Naxos is the one to have, unless you can find the Gregor on Supraphon---either deleted or not imported any more, it would seem. The Centaur (Burke, with American Suite) is tamer than the Naxos but still quite Czech.
+These are among the many Dvořák works looked down upon by the musicologists. Only No. 3 has been considered respectable. But all three are delicious, and the Editor's favorite is No. 1. Its best recording was by Neumann, but that hasn't been around in years. You should enjoy all three, and the Naxos is the one to have, unless you can find the Gregor on Supraphon---either deleted or not imported any more, it would seem. The Centaur (Burke, with American Suite) is tamer than the Naxos but still quite Czech.
 
 \st
 Kosler & Naxos 550610
@@ -623,21 +623,57 @@ Kosler & Naxos 550610
 
 This started out as piano music in 1894 (Opus
 98), and it was composed purely for pleasure.
-The opening phrase---it comes back at the end---bears an uncanny resemblance to `Vissi d'Arte'. He is trying consciously to appeal to the American sensibility, and the result is a little sentimental but still charming. One number is a sort of cake-walk that Dvorak scholar Alec Robertson called enchantingly vulgar. A lullaby movement has ``Indian'' overtones. The final gavotte is not terribly well written, but even inferior Dvorak is usually pleasant.
+The opening phrase---it comes back at the end---bears an uncanny resemblance to `Vissi d'Arte'. He is trying consciously to appeal to the American sensibility, and the result is a little sentimental but still charming. One number is a sort of cake-walk that Dvořák scholar Alec Robertson called enchantingly vulgar. A lullaby movement has ``Indian'' overtones. The final gavotte is not terribly well written, but even inferior Dvořák is usually pleasant.
 
-The best recording was by Michael Tilson Thomas; Sony owns it and---who knows?--may bring it to CD. Five others are listed right now---the most ever (it was a hard piece to find in LP days). Altrichter is tempting, because he has the Czech Philharmonic on Supraphon.
+The best recording was by Michael Tilson Thomas; Sony owns it and---who knows?---may bring it to CD. Five others are listed right now---the most ever (it was a hard piece to find in LP days). Altrichter is tempting, because he has the Czech Philharmonic on Supraphon.
 The playing is very refined, but something can be so refined it loses its character, and that seems to have happened with Altrichter. It's lovely but it's almost bland, too. You have to force yourself to listen closely to it or it just slips right by you without affecting you at all.
 Gorgeous sound---also clean and refined rather than warm and sensual. Dennis Burkh on Centaur also conducts a Czech orchestra; the playing and sound are better for the music---not as refined---and the conducting is fine. This is not a big, complicated piece, and Burkh brings out its simplicity rather nicely.
 The Dorati comes with Kondrashin's Ninth nowadays, but we all have the older Kondrashin issue with no fill, so we haven't heard it.
 
-Lawrence Hansen says Pesek comes close to
-MTT, and that's a strong recommendation, considering how little Mr Hansen thought of his Ninth (Sept/Oct 1989), which it is coupled with. If money is no object, buy the Pesek anyway. The Sejna recording dates from 1954 and sounds it.
+Lawrence Hansen says Pešek comes close to
+MTT, and that's a strong recommendation, considering how little Mr Hansen thought of his Ninth (Sept/Oct 1989), which it is coupled with. If money is no object, buy the Pešek anyway. The Sejna recording dates from 1954 and sounds it.
 
 \st
 Thomas & Sony NA\\
-Pesek & Virgin 59505\\
+Pešek & Virgin 59505\\
 Burkh & Centaur 2121\\
 Altricher & Supraphon 3178
+\et
+
+\section{Czech Suite}
+
+A mature (1879) five-movement suite of Czech dances and tunes-very appealing and under-appreciated.
+The best recording of this has to be Macal's-coupled with a rather choppy Symphony
+8. Tom Godell was very pleased with the intimate-sounding Jordan (``radiant''), except that the string sound is edgy. Another very good one is Pešek, with his excellent Symphony 5.
+
+\st
+Macal & Koss 1002\\
+Pešek & Virgin 59522
+\et
+
+\section{String Serenade}
+
+The title and the music suggest a music: evening in an aristocratic drawing room. It courtly music---quite elegant---and only lets go a little in the final movement (of five). This is the earliest Dvorak composition (1875) that almost any listener will be enchanted by. (I don't mean to detract from the early symphonies---I like them very much.)
+
+The Prague Chamber Orchestra (without conductor) slogs thru this with no spirit at all.
+The Prague Soloists are rather stiff and formal.
+The Suk Chamber Orchestra on Supraphon is very disappointing: tiny group, miked too close-up. Gilbert French trounced the Golub---no character, with plodding rhythms and spongy pacing---and liked the Archetype recording by the Metamorphosen Chamber Orchestra (J/F 1998), and John McKelvey liked the one led by Jaime Laredo (exquisite, satisfying---Jan/Feb 1992). Others of us found it too laid-back. Jordan is delicate, sensitive, and touching, but the violins can be shrill (miked too close).
+
+Ashkenazy (with the Cleveland Orchestra) was rather dry and even heavy. Belohlavek is full of irritating exaggerations. The opening Moderato is a dirge; the Scherzo flies by much too fast. The chamber orchestra (it's not the Czech Philharmonic) doesn't sound that good, either.
+
+The Karajan was one of the first CDs, and apparently DG has never reissued it at a lower price. It's still in the catalog, but the interpretation is almost nasty, as if he resented having to do it. The sound as less than ideal (steely strings with no blend), the rhythms stiff and square. It's heartless, stern, and severe.
+
+Among records that couple the two serenades, Teldec's (St Paul/Hugh Wolff) has rather cool sound, with little ambience.
+
+The Granada Chamber Orchestra on Claves is very heartfelt and intense, and though they are not perfectly together all the time, they make such a nice sound that it's hard to resist. They join the Dvorak with the Suk and Janacek equivalents, so you hear the development of the Czech string serenade.
+Naxos also gives us the Suk serenade with the Dvorak; both are marvelous performances in gorgeous sound. The Editor is not alone in finding the Naxos the best available at any price. What a joy after Karajan!
+
+As we write this, EMI is about to release---for the first time on CD--the 1975 Stokowski.
+It is very unusual---not like any other recording. It is gratifying to have a full string section instead of a mere chamber orchestra, and Stokowski certainly knew what to do with strings. As you would expect, the nuances and expressive devices are many and effective. I have this on cassette, so it is hard to say what the CD will sound like, but I expect to acquire it by hook or by crook.
+
+\st
+Krcek & Naxos 550419\\
+Stokowski & EMI 66760
 \et
 
 \end{document}
